add about style

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<section class="about">
 				<div class="container about__inner">
 					<div class="about__content">
-						<h2 class="about__title">Про нас</h2>
+						<h2 class="about__title title">Про нас</h2>
 						<p class="about__text">
 							Богдан творець бренду який завжди зацікавлений у виготовленні
 							різноманітних речей вдома. Він регулярно експериментував з різними
@@ -88,18 +88,73 @@
 					</div>
 					<ul class="about__list">
 						<li class="about__item">
-							<img src="images/about-1.jpg" alt="" class="about__item-img" />
+							<img
+								class="about__item-img about__item-img--1"
+								src="images/about-1.jpg"
+								alt="candle"
+							/>
 							<p class="about__item-text">Насолоджуйтеся моментом</p>
 						</li>
 						<li class="about__item">
-							<img src="images/about-2.png" alt="" class="about__item-img" />
+							<img
+								class="about__item-img about__item-img--2"
+								src="images/about-2.png"
+								alt="candle"
+							/>
 							<p class="about__item-text">Створіть улюблену атмосферу</p>
 						</li>
 						<li class="about__item">
-							<img src="images/about-3.jpg" alt="" class="about__item-img" />
+							<img
+								class="about__item-img about__item-img--3"
+								src="images/about-3.jpg"
+								alt="candle"
+							/>
 							<p class="about__item-text">Виготовлені з любов'ю</p>
 						</li>
 					</ul>
+				</div>
+			</section>
+			<section class="products">
+				<div class="container section__inner">
+					<div class="products__descr section__descr">
+						<h2 class="product__title title">Наші товари</h2>
+						<p class="products__text section__text">
+							Ми використовуємо тільки найкращі якісні матеріали: соєвий віск,
+							віскові барвники, високоякісні ароматичні олії та бавовняні
+							фітільці. Відтінки свічок дуже гармонійно поєднуються з ароматом,
+							створюючи незабутню атмосферу у вашому домі.
+						</p>
+					</div>
+					<div class="products__content section__descr">
+						<div class="products__item">
+							<products_item-img src="images/product-1.jpg"></products_item-img>
+							<p class="products__item-price">101</p>
+							<h4 class="product__item-title">"Сердечко кохання"</h4>
+							<p class="product__item-text">some text</p>
+							<button class="button">Купити</button>
+						</div>
+						<div class="products__item">
+							<products_item-img src="images/product-1.jpg"></products_item-img>
+							<p class="products__item-price">102</p>
+							<h4 class="product__item-title">"Сердечко кохання"</h4>
+							<p class="product__item-text">some text</p>
+							<button class="button">Купити</button>
+						</div>
+						<div class="products__item">
+							<products_item-img src="images/product-1.jpg"></products_item-img>
+							<p class="products__item-price">103</p>
+							<h4 class="product__item-title">"Сердечко кохання"</h4>
+							<p class="product__item-text">some text</p>
+							<button class="button">Купити</button>
+						</div>
+						<div class="products__item">
+							<products_item-img src="images/product-1.jpg"></products_item-img>
+							<p class="products__item-price">104</p>
+							<h4 class="product__item-title">"Сердечко кохання"</h4>
+							<p class="product__item-text">some text</p>
+							<button class="button">Купити</button>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
