--- a/index.html
+++ b/index.html
@@ -130,28 +130,40 @@
 							<img class="products__item-img" src="images/product-1.jpg" />
 							<p class="products__item-price">10$</p>
 							<h4 class="products__item-title">"Сердечко кохання"</h4>
-							<p class="products__item-text">some text</p>
+							<p class="products__item-text">
+								Запах: ніжний аромат троянди та ванілі. Для чого: для атмосфери
+								романтичного настрою
+							</p>
 							<button class="button">Купити</button>
 						</li>
 						<li class="products__item">
 							<img class="products__item-img" src="images/product-2.jpg" />
 							<p class="products__item-price">20$</p>
 							<h4 class="products__item-title">"Сердечко кохання"</h4>
-							<p class="products__item-text">some text</p>
+							<p class="products__item-text">
+								Запах: ніжний аромат лаванди. Для чого: для створення атмосфери
+								затишку
+							</p>
 							<button class="button">Купити</button>
 						</li>
 						<li class="products__item">
 							<img class="products__item-img" src="images/product-3.jpg" />
 							<p class="products__item-price">10$</p>
 							<h4 class="products__item-title">"Сердечко кохання"</h4>
-							<p class="products__item-text">some text</p>
+							<p class="products__item-text">
+								Запах: Свіжий аромат лайма. Для чого: для енергії та свіжості в
+								приміщені.
+							</p>
 							<button class="button">Купити</button>
 						</li>
 						<li class="products__item">
 							<img class="products__item-img" src="images/product-4.jpg" />
 							<p class="products__item-price">10$</p>
 							<h4 class="products__item-title">"Сердечко кохання"</h4>
-							<p class="products__item-text">some text</p>
+							<p class="products__item-text">
+								Запах: ніжний аромат лаванди та фрезій. Для чого: для затишку та
+								комфорту.
+							</p>
 							<button class="button">Купити</button>
 						</li>
 					</ul>
@@ -161,7 +173,7 @@
 				<div class="container section__inner">
 					<div class="creating__descr section__descr">
 						<h2 class="creating__title title">Етапи створення свічок</h2>
-						<p class="creating__text section__text">
+						<p class="section__text">
 							Створення свічки із соєвого воску може складатися з наступних
 							етапів:
 						</p>
@@ -196,7 +208,7 @@
 									пристрої до потрібної температури. Додавання ароматизаторів та
 									барвників за необхідності.
 								</p>
-								<span class="creating__num">03</span>
+								<span class="creating__num creating__num--right">03</span>
 							</div>
 						</li>
 						<li class="creating__item">
@@ -206,7 +218,7 @@
 									Підготовка фітіля: вставлення фітіля до форми та зафіксування
 									його так, щоб він був рівномірно напружений.
 								</p>
-								<span class="creating__num">04</span>
+								<span class="creating__num creating__num--right">04</span>
 							</div>
 						</li>
 						<li class="creating__item">
@@ -238,7 +250,7 @@
 									пристрої до потрібної температури. Додавання ароматизаторів та
 									барвників за необхідності.
 								</p>
-								<span class="creating__num">07</span>
+								<span class="creating__num creating__num--right">07</span>
 							</div>
 						</li>
 						<li class="creating__item">
@@ -248,7 +260,7 @@
 									Підготовка фітіля: вставлення фітіля до форми та зафіксування
 									його так, щоб він був рівномірно напружений.
 								</p>
-								<span class="creating__num">08</span>
+								<span class="creating__num creating__num--right">08</span>
 							</div>
 						</li>
 						<li class="creating__item">
