add styles courses section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Yeseva+One&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Document</title>
+		<title>Candler</title>
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
@@ -299,26 +299,30 @@
 					</div>
 					<ul class="courses__content section__content-descr section--decor">
 						<li class="courses__item">
-							<img src="images/courses-1.jpg" />
+							<div class="courses__item-box">
+								<img class="courses__item-img" src="images/courses-1.jpg" />
+								<p class="courses__name">Основи виготовлення свічок</p>
+								<p class="courses__time">Навчання <span>- 20 год</span></p>
+								<p class="courses__price">Ціна - 40$</p>
+							</div>
 							<h4 class="courses__item-title">Основи виготовлення свічок</h4>
 							<p class="courses__item-text">
 								Будемо навчати основам виготовлення свічок з різних матеріалів.
 							</p>
-							<p class="courses__item-price">Ціна - 40$</p>
-							<p class="courses__name">Основи виготовлення свічок</p>
-							<p class="courses__length">Навчання - 20 год</p>
 							<button class="button">Купити курс</button>
 						</li>
 						<li class="courses__item">
-							<img src="images/courses-2.jpg" />
+							<div class="courses__item-box">
+								<img class="courses__item-img" src="images/courses-2.jpg" />
+								<p class="courses__name">Мистецтво ароматерапії</p>
+								<p class="courses__time">Навчання <span>- 20 год</span></p>
+								<p class="courses__price">Ціна - 40$</p>
+							</div>
 							<h4 class="courses__item-title">Мистецтво ароматерапії</h4>
 							<p class="courses__item-text">
 								Будемо вивчати мистецтво ароматерапії та виготовлення свічок з
 								різними ароматами.
 							</p>
-							<p class="courses__item-price">Ціна - 40$</p>
-							<p class="courses__name">Мистецтво ароматерапії</p>
-							<p class="courses__length">Навчання - 20 год</p>
 							<button class="button">Купити курс</button>
 						</li>
 					</ul>
