add mentors section

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 			</section>
 			<section class="mentors section">
 				<div class="container section__inner">
-					<div class="mentors__descr section__descr">
+					<div class="section__descr">
 						<h2 class="product__title title">Наші викладачі</h2>
 						<p class="mentors__text section__text">
 							Ці люди працюють разом, щоб створювати курси для вас, які
@@ -344,9 +344,11 @@
 								alt="portrait"
 								class="mentors__img"
 							/>
-							<div class="mentors__descr">
-								<p class="name">Викладач Богдан</p>
-								<p>Має досвід викладання і роботи 4 роки</p>
+							<div class="mentors__box">
+								<p class="mentors__name">Викладач Богдан</p>
+								<p class="mentors__box-text">
+									Має досвід викладання і роботи 4 роки
+								</p>
 							</div>
 						</li>
 						<li class="mentors__item">
@@ -355,9 +357,11 @@
 								alt="portrait"
 								class="mentors__img"
 							/>
-							<div class="mentors__descr">
-								<p class="name">Викладач Анна</p>
-								<p>Має досвід викладання і роботи 6 років</p>
+							<div class="mentors__box">
+								<p class="mentors__name">Викладач Анна</p>
+								<p class="mentors__box-text">
+									Має досвід викладання і роботи 6 років
+								</p>
 							</div>
 						</li>
 						<li class="mentors__item">
@@ -366,9 +370,11 @@
 								alt="portrait"
 								class="mentors__img"
 							/>
-							<div class="mentors__descr">
-								<p class="name">Викладач Галина</p>
-								<p>Навчає сфері дизайну та декорування</p>
+							<div class="mentors__box">
+								<p class="mentors__name">Викладач Галина</p>
+								<p class="mentors__box-text">
+									Навчає сфері дизайну та декорування
+								</p>
 							</div>
 						</li>
 						<li class="mentors__item">
@@ -377,9 +383,9 @@
 								alt="portrait"
 								class="mentors__img"
 							/>
-							<div class="mentors__descr">
-								<p class="name">Маркетолог Ольга</p>
-								<p>Допоможе вам з рекламою</p>
+							<div class="mentors__box">
+								<p class="mentors__name">Маркетолог Ольга</p>
+								<p class="mentors__box-text">Допоможе вам з рекламою</p>
 							</div>
 						</li>
 					</ul>
