--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 		/>
 		<title>Candler</title>
 		<link rel="stylesheet" href="css/reset.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+		/>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
@@ -394,30 +398,165 @@
 			<section class="reviews section">
 				<div class="container section__inner">
 					<div class="reviews__descr section__descr">
-						<h2 class="product__title title"></h2>
-						<p class="reviews__text section__text"></p>
+						<h2 class="product__title title">Відгуки від клієнтів</h2>
+						<p class="reviews__text section__text">
+							Наші покупці мають різний вік, статус, заняття і інтереси, але у
+							них є одна спільна риса - вони прагнуть до гармонії і знаходять
+							радість у маленьких радощах життя, які створюють атмосферу затишку
+							та гармонії у їхньому домі.
+						</p>
 					</div>
-					<ul
-						class="reviews__content section__content-descr section--decor"
-					></ul>
+					<div class="reviews__content section--decor">
+						<div class="reviews__slider">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<div class="reviews__item">
+										<div class="reviews__item-video">
+											<img
+												class="reviews__item-img"
+												src="images/reviews.jpg"
+												alt=""
+											/>
+											<button class="reviews__video-btn">
+												<img src="images/btn.svg" alt="" />
+											</button>
+										</div>
+										<div class="reviews__item-content">
+											<a href="#" class="reviews__item-social">
+												<img src="images/instagram.svg" alt="" />
+											</a>
+											<p class="reviews__item-name">Іван Пилипенко</p>
+											<p class="reviews__item-text">
+												Я замовив свічку в формі сердечка на День Святого
+												Валентина для моєї дівчини і вона була просто
+												неймовірна! Запах був дуже приємним і романтичним, а
+												форма сердечка була досконалою для цього свята. Моя
+												дівчина була дуже задоволена подарунком, і я точно
+												замовлю ще свічок від цього сайту!"
+											</p>
+											<button class="button reviews__btn">
+												Купити цей товар
+											</button>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="reviews__item">
+										<div class="reviews__item-video">
+											<img
+												class="reviews__item-img"
+												src="images/reviews.jpg"
+												alt=""
+											/>
+											<button class="reviews__video-btn">
+												<img src="images/btn.svg" alt="" />
+											</button>
+										</div>
+										<div class="reviews__item-content">
+											<a href="#" class="reviews__item-social">
+												<img src="images/instagram.svg" alt="" />
+											</a>
+											<p class="reviews__item-name">Іван Пилипенко</p>
+											<p class="reviews__item-text">
+												Я замовив свічку в формі сердечка на День Святого
+												Валентина для моєї дівчини і вона була просто
+												неймовірна! Запах був дуже приємним і романтичним, а
+												форма сердечка була досконалою для цього свята. Моя
+												дівчина була дуже задоволена подарунком, і я точно
+												замовлю ще свічок від цього сайту!"
+											</p>
+											<button class="button reviews__btn">
+												Купити цей товар
+											</button>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="reviews__item">
+										<div class="reviews__item-video">
+											<img
+												class="reviews__item-img"
+												src="images/reviews.jpg"
+												alt=""
+											/>
+											<button class="reviews__video-btn">
+												<img src="images/btn.svg" alt="" />
+											</button>
+										</div>
+										<div class="reviews__item-content">
+											<a href="#" class="reviews__item-social">
+												<img src="images/instagram.svg" alt="" />
+											</a>
+											<p class="reviews__item-name">Іван Пилипенко</p>
+											<p class="reviews__item-text">
+												Я замовив свічку в формі сердечка на День Святого
+												Валентина для моєї дівчини і вона була просто
+												неймовірна! Запах був дуже приємним і романтичним, а
+												форма сердечка була досконалою для цього свята. Моя
+												дівчина була дуже задоволена подарунком, і я точно
+												замовлю ще свічок від цього сайту!"
+											</p>
+											<button class="button reviews__btn">
+												Купити цей товар
+											</button>
+										</div>
+									</div>
+								</div>
+								<div class="swiper-slide">
+									<div class="reviews__item">
+										<div class="reviews__item-video">
+											<img
+												class="reviews__item-img"
+												src="images/reviews.jpg"
+												alt=""
+											/>
+											<button class="reviews__video-btn">
+												<img src="images/btn.svg" alt="" />
+											</button>
+										</div>
+										<div class="reviews__item-content">
+											<a href="#" class="reviews__item-social">
+												<img src="images/instagram.svg" alt="" />
+											</a>
+											<p class="reviews__item-name">Іван Пилипенко</p>
+											<p class="reviews__item-text">
+												Я замовив свічку в формі сердечка на День Святого
+												Валентина для моєї дівчини і вона була просто
+												неймовірна! Запах був дуже приємним і романтичним, а
+												форма сердечка була досконалою для цього свята. Моя
+												дівчина була дуже задоволена подарунком, і я точно
+												замовлю ще свічок від цього сайту!"
+											</p>
+											<button class="button reviews__btn">
+												Купити цей товар
+											</button>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="swiper-pagination"></div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<section class="quality section">
 				<div class="container section__inner">
 					<div class="quality__descr section__descr">
-						<h2 class="product__title title"></h2>
-						<p class="quality__text section__text"></p>
+						<h2 class="product__title title">Сертифікати якості</h2>
+						<p class="quality__text section__text">
+							Сертифікати забезпечують додаткову довіру та впевненість для наших
+							клієнтів
+						</p>
 					</div>
-					<ul
+					<div
 						class="quality__content section__content-descr section--decor"
-					></ul>
+					></div>
 				</div>
 			</section>
 			<section class="faq section">
 				<div class="container section__inner">
 					<div class="faq__descr section__descr">
-						<h2 class="product__title title"></h2>
-						<p class="faq__text section__text"></p>
+						<h2 class="product__title title">Часті запитання</h2>
 					</div>
 					<ul class="faq__content section__content-descr"></ul>
 				</div>
@@ -494,6 +633,7 @@
 			</div>
 		</footer>
 
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
