--- a/index.html
+++ b/index.html
@@ -572,9 +572,26 @@
 			<section class="faq section">
 				<div class="container section__inner">
 					<div class="faq__descr section__descr">
-						<h2 class="product__title title">Часті запитання</h2>
+						<h2 class="title">Часті запитання</h2>
 					</div>
-					<ul class="faq__content section__content-descr"></ul>
+					<div class="faq__content section__content-descr"></div>
+				</div>
+			</section>
+			<section class="promo">
+				<div class="container promo__inner">
+					<p class="promo__text">Купуйте більше, економте більше</p>
+					<a class="promo__link" href="#">В каталог</a>
+				</div>
+			</section>
+			<section class="contacts">
+				<div class="container contacts__inner">
+					<form class="form" action="">
+						<p class="form__title">Підпишись на наші акції</p>
+						<input class="form__input" type="text" placeholder="Ім'я" />
+						<input class="form__input" type="email" placeholder="Е-mail" />
+						<button class="form__btn" type="submit">Підписатись</button>
+					</form>
+					<img class="contacts__img" src="images/contacts.jpg" alt="" />
 				</div>
 			</section>
 		</main>
